# RandomNumberGenerator

./: CMakeLists.txt  RandomNumberGenerator.cpp  RandomNumberGenerator.h
Results/: STL_Cauchy.txt  STL_Gaussian.txt  myRNG_Cauchy_Bisection.txt  myRNG_Cauchy_ITP.txt  myRNG_Gaussian_Bisection.txt  myRNG_Gaussian_ITP.txt
